[package]
name = "file-sharing-example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
futures-timer = "0.3"
tracing = "0.1"
libp2p = { version = "0.50", features = [
    "macros",
    "tokio",
    "tcp",
    "dns",
    "websocket",
    "noise",
    "mplex",
    "yamux",
    "relay",
    "ping",
    "identify",
    "rendezvous",
    "request-response",
] }
void = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing-subscriber = "0.3"
prost = "0.11"
libp2p-file-get = { path = "./file-get" }

[build-dependencies]
prost-build = "0.11"

[workspace]
members = ["file-get"]
