[package]
name = "libp2p-file-get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures = "0.3"
libp2p-core = "0.38"
libp2p-swarm = "0.41"
log = "0.4"
prost = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["codec", "compat"], optional = true }
smallvec = "1.10.0"
bytes = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4.0.32", features = ["derive"] }
libp2p = { version = "0.50", features = ["full"] }

[build-dependencies]
prost-build = "0.11.5"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util"]
